force-app/main/default/objects/LLC_BI__Covenant_Rule__c/fields/LLC_BI__Covenant__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Covenant__c</fullName>
    <description>This field is required and is automatically populated. It identifies the covenant associated with the Covenant Rule record and is automatically populated when creating a new Covenant Rule.</description>
    <label>Covenant Mgmt</label>
    <referenceTo>LLC_BI__Covenant2__c</referenceTo>
    <relationshipLabel>Covenant Rules</relationshipLabel>
    <relationshipName>Covenant_Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>