force-app/main/default/objects/LLC_BI__Covenant_Rule__c/fields/LLC_BI__End_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__End_Date__c</fullName>
    <description>This field is required. It is manually poulated. It stores the last day this rule will be used.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>