force-app/main/default/objects/LLC_BI__Covenant_Rule__c/fields/LLC_BI__Operator__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Operator__c</fullName>
    <description>This field is required and is manually populated. It stores whether a value in Spreads should be greater than or less than the LLC_BI__Financial_Indicator_Value__c to pass.</description>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&gt;=</fullName>
            </value>
            <value>
                <fullName>&lt;=</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>